# caviarpd-package

./: .RData  .gitignore  NOTES-for-CRAN  README.md  caviarpd.Rproj
caviarpd/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.note  NAMESPACE  NEWS
caviarpd.Rcheck/: 00install.out  caviarpd-Ex.R  caviarpd-Ex_i386.Rout  caviarpd-Ex_x64.Rout
caviarpd.Rcheck/00_pkg_src/caviarpd/: DESCRIPTION
caviarpd.Rcheck/00_pkg_src/caviarpd/R/: DDCRPPartition.R  caviarPD.R  caviarpd.R  extendr-wrappers.R  helloWorld.R  internal-utils.R  jaccard.R  losses.R  (+4 more)
caviarpd.Rcheck/caviarpd/: DESCRIPTION  INDEX  NAMESPACE
caviarpd.Rcheck/caviarpd/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
caviarpd.Rcheck/caviarpd/R/: caviarpd.rdb  caviarpd.rdx
caviarpd.Rcheck/caviarpd/help/: AnIndex  aliases.rds  caviarpd.rdb  caviarpd.rdx  paths.rds
caviarpd.Rcheck/caviarpd/html/: 00Index.html
caviarpd.Rcheck/examples_i386/: caviarpd-Ex.timings
caviarpd.Rcheck/examples_x64/: caviarpd-Ex.timings
caviarpd/R/: DDCRPPartition.R  EPAPartition.R  caviarPD.R  caviarpd.R  extendr-wrappers.R  helloWorld.R  internal-utils.R  jaccard.R  losses.R  masses.R  pumpkin-internals.R  roxido.R  rustlib.R  samplePartition.R
caviarpd/inst/: AUTHORS
caviarpd/man/: caviarPD.Rd  caviarpd-package.Rd  caviarpd.Rd  caviarpd2.Rd  helloWorld.Rd  jaccard.Rd  loss.indexes.Rd  select.masses.Rd  single.mass.Rd
caviarpd/man/examples/: select.masses.R  single.mass.R
caviarpd/src/: .gitignore  Makevars  Makevars.win  entrypoint.c  shim.c  wrapper.c
caviarpd/src/rust/: Cargo.toml  vendor.tar.xz
caviarpd/src/rust/epa/src/: clust.rs  epa.rs
caviarpd/src/rust/src/: lib.rs  registration.rs
caviarpd/src/rustlib/: Cargo.toml  dahl-randompartition.h  generate-headers
caviarpd/src/rustlib/epa/: Cargo.toml
caviarpd/src/rustlib/epa/src/: clust.rs  epa.rs
caviarpd/src/rustlib/roxido/: Cargo.toml
caviarpd/src/rustlib/roxido/src/: lib.rs  r.rs  rbindings.rs  rinternals.rs
caviarpd/src/rustlib/src/: lib.rs  registration.rs
caviarpd/tests/: testthat.R
caviarpd/tests/testthat/: setup-instance.R  teardown-instance.R  test-dummy.R
caviarpd/tools/: build_rust_library.R  registration.R  staticlib.R
(+17 files in other folders)
