[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
roots = "0.0.7"
dahl-salso = "0.6.6"
epa = { path = "epa" }
roxido = { path = "roxido" }
