[package]
name = "rustlib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
dahl-salso = "0.5.6"
epa = { path = "epa" }
dahl-roxido = { git="https://dahl-git.byu.edu/dahl/rust-dahl-roxido.git" }

